src/test/ui/consts/control-flow/assert.const_panic.stderr
error[E0080]: any use of this value will cause an error
  --> $DIR/assert.rs:10:15
   |
LL | const _: () = assert!(false);
   | --------------^^^^^^^^^^^^^^-
   |               |
   |               the evaluated program panicked at 'assertion failed: false', $DIR/assert.rs:10:15
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
